--- a/public/example/index.html
+++ b/public/example/index.html
@@ -10,7 +10,7 @@
 
 <title>Feed</title>
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
-<link href="css/bootstrap.min.css" rel="stylesheet">
+<link href="css/bootstrap.min.css?23" rel="stylesheet">
 <link href="css/fine-uploader-new.css" rel="stylesheet">
 <link href="css/custom.css" rel="stylesheet">
 
@@ -316,7 +316,7 @@
 
 <script src="js/jquery.js"></script>
 <script src="js/bootstrap.min.js?1017"></script>
-<script src="js/feed.js?1026"></script>
+<script src="js/feed.js?1036"></script>
 <script src="js/jquery.fine-uploader.js"></script>
 <script src="js/timeago.min.js" type="text/javascript"></script>        
 <script src="js/timeago.locales.min.js" type="text/javascript"></script>        
