create user on frontend

--- a/public/example/index.html
+++ b/public/example/index.html
@@ -86,10 +86,10 @@
 
  <div id="create_user_template" style="display: none;">
         <div class="col-sm-6" style="padding: 0 0 0 0;">
-                <input name="email" type="email" class="form-control" placeholder="Email"/>
-                <input name="display_name" type="text" class="form-control" placeholder="Displayname"/>
-                <input name="pass" type="password" class="form-control" placeholder="Password"/>
-                <input type="button" onclick='alert(md5("hidden"));' class="btn btn-primary" value="CREATE"/>
+                <input id="create_user_email" type="email" class="form-control" placeholder="Email"/>
+                <input id="create_user_display_name" type="text" class="form-control" placeholder="Displayname"/>
+                <input id="create_user_pass" type="password" class="form-control" placeholder="Password"/>
+                <input type="button" onclick='createUser();' class="btn btn-primary" value="CREATE"/>
                 
 </div>
 <div class="col-sm-6" style="padding: 0 0 0 0;">Or login
@@ -316,7 +316,7 @@
 
 <script src="js/jquery.js"></script>
 <script src="js/bootstrap.min.js?1017"></script>
-<script src="js/feed.js?1037"></script>
+<script src="js/feed.js?1038"></script>
 <script src="js/jquery.fine-uploader.js"></script>
 <script src="js/timeago.min.js" type="text/javascript"></script>        
 <script src="js/timeago.locales.min.js" type="text/javascript"></script>        
