--- a/public/example/index.html
+++ b/public/example/index.html
@@ -158,8 +158,8 @@
 <script id="edit_template" type="text/html">
     <div class="edit_view">
         <textarea id="edit_textarea_{{message_id}}" class="form-control" rows="10"></textarea>
-        <button onclick="saveEditPost({{message_id}})" class="btn btn-primary">GEM</button>
-        <button onclick="cancelEdit({{message_id}})" class="btn btn-default">AFBRYD</button>
+        <button onclick="saveEditPost('{{message_id}}')" class="btn btn-primary">GEM</button>
+        <button onclick="cancelEdit('{{message_id}}')" class="btn btn-default">AFBRYD</button>
     </div>
 </script>
 
@@ -314,7 +314,7 @@
 
 <script src="js/jquery.js"></script>
 <script src="js/bootstrap.min.js?1017"></script>
-<script src="js/feed.js?1043"></script>
+<script src="js/feed.js?1044"></script>
 <script src="js/jquery.fine-uploader.js"></script>
 <script src="js/timeago.min.js" type="text/javascript"></script>        
 <script src="js/timeago.locales.min.js" type="text/javascript"></script>        
