--- a/public/example/index.html
+++ b/public/example/index.html
@@ -172,7 +172,7 @@
         {{/avatar_photo_id}}
     </div>
     <div class="col-sm-10" style="padding: 0 0 0 0;">
-        {{{ content }}} <b>{{ user.display_name }}</b>
+        {{{ content }}} <b>by {{ user.display_name }}</b>
     </div>
     </div>
 </script>
@@ -187,7 +187,7 @@
         {{/avatar_photo_id}}
         {{^avatar_photo_id}}
         <div style="display: inline-block;">
-            {{user.display_name}}
+            by {{user.display_name}}
         </div>
         {{/avatar_photo_id}}       
         <div style="display: inline-block; padding-left: 6px;">
@@ -314,7 +314,7 @@
 
 <script src="js/jquery.js"></script>
 <script src="js/bootstrap.min.js?1017"></script>
-<script src="js/feed.js?1052"></script>
+<script src="js/feed.js?1053"></script>
 <script src="js/jquery.fine-uploader.js"></script>
 <script src="js/timeago.min.js" type="text/javascript"></script>        
 <script src="js/timeago.locales.min.js" type="text/javascript"></script>        
