--- a/public/example/index.html
+++ b/public/example/index.html
@@ -97,7 +97,7 @@
 
  <script id="top_logged_out" type="text/html">
  <div class="row" style="margin: 0 0 0 0;">
-    You are no longer logged in. {{message}}
+    <p>You are no longer logged in. {{message}}</p>
     <a href="javascript: showLogin();">Login</a>
 or <a href="javascript: showSignup()">Create user</a>
 to post
@@ -322,7 +322,7 @@ to post
 
 <script src="js/jquery.js"></script>
 <script src="js/bootstrap.min.js?1017"></script>
-<script src="js/feed.js?1057"></script>
+<script src="js/feed.js?1058"></script>
 <script src="js/jquery.fine-uploader.js"></script>
 <script src="js/timeago.min.js" type="text/javascript"></script>        
 <script src="js/timeago.locales.min.js" type="text/javascript"></script>        
