--- a/public/example/index.html
+++ b/public/example/index.html
@@ -216,7 +216,7 @@ to post
         {{/view_feed_id}}
         </div>
         </div>
-        <div style="display: inline;" id="message_content_{{ id }}">{{{ content }}}</div>
+        <div style="display: inline;" id="message_content_{{ _id }}">{{{ content }}}</div>
         {{#photos}}
         {{#more_photos }}
         <div class="cutted_div">
