--- a/public/example/index.html
+++ b/public/example/index.html
@@ -243,7 +243,7 @@ to post
         <div class='comments_section' id='comments_section_{{ _id }}' style='display: none'></div>
         <br/>
         <a href='javascript: commentPost("{{ _id }}")'>Comment</a>
-        <a href='javascript: copyShareLink("{{ _id }}")'>Share</a>
+        <!-- a href='javascript: copyShareLink("{{ _id }}")'>Share</a-->
         {{#is_owner}}
         <a href='javascript: editPost("{{ _id }}")'>Edit</a>
         <a href='javascript: deletePost("{{ _id }}")'>Delete</a>
