--- a/public/example/index.html
+++ b/public/example/index.html
@@ -227,7 +227,7 @@ to post
         {{/more_photos}}
         {{^more_photos}}
         <br/><br/>     
-        <a href="javascript: showPhotos('{{ message_id }}'', 0)">
+        <a href="javascript: showPhotos('{{ message_id }}', 0)">
                 <img style='max-width: 90%' src='{{ media_url }}'/>    
         </a>     
         {{/more_photos}}
