--- a/public/example/index.html
+++ b/public/example/index.html
@@ -24,7 +24,7 @@
 
 <div class="row top_area" style="margin-top: 0px;">
         <div class="col-sm-12" id="feed_header">
-                                <a href="javascript: changeFeed(0);"><h1>ALL FEEDS</h1></a>
+                                <a href="javascript: changeFeed(0, 'ALL FEEDS');"><h1>ALL FEEDS</h1></a>
                                 
 </div></div>    
 <div class="row top_area" style="margin-top: 0px;">
@@ -332,7 +332,7 @@ to post
 
 <script src="js/jquery.js"></script>
 <script src="js/bootstrap.min.js?1017"></script>
-<script src="js/feed.js?1080"></script>
+<script src="js/feed.js?1081"></script>
 <script src="js/jquery.fine-uploader.js"></script>
 <script src="js/timeago.min.js" type="text/javascript"></script>        
 <script src="js/timeago.locales.min.js" type="text/javascript"></script>        
