test get message

--- a/tests/test.html
+++ b/tests/test.html
@@ -9,7 +9,6 @@
 <meta http-equiv="X-UA-Compatible" content="IE=Edge">
 
 <title>Feed tests</title>
-<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
 
 <script>
 </script>
@@ -17,7 +16,9 @@
 </head> 
 <body>
 
+<div style="margin-bottom: 12px;">
 <button onclick="startLoop();">RUN TESTS</button>
+</div>
 
 <div id="testlogger"></div>
 
