--- a/tests/test.html
+++ b/tests/test.html
@@ -25,6 +25,15 @@
 
 
 <script src="jquery.js"></script>
+<script src="TestClass.js"></script>
+<script src="DeleteMessageTest.js"></script>
+<script src="CrreateUserTest.js"></script>
+<script src="LoginTest.js"></script>
+<script src="CreateFeedTest.js"></script>
+<script src="GetUserFeedsTest.js"></script>
+<script src="SubmitMessageTest.js"></script>
+<script src="GetMessageTest.js"></script>
+<script src="EditMessageTest.js"></script>
 <script src="test.js?1081"></script>
 <script src="md5.js"></script>
 
