delete feed test

--- a/tests/test.html
+++ b/tests/test.html
@@ -34,6 +34,7 @@
 <script src="SubmitMessageTest.js"></script>
 <script src="GetMessageTest.js"></script>
 <script src="EditMessageTest.js"></script>
+<script src="DeleteFeedTest.js"></script>
 <script src="test.js?1081"></script>
 <script src="md5.js"></script>
 
