--- a/tests/test.html
+++ b/tests/test.html
@@ -26,15 +26,15 @@
 
 <script src="jquery.js"></script>
 <script src="TestClass.js"></script>
-<script src="DeleteMessageTest.js"></script>
-<script src="CrreateUserTest.js"></script>
-<script src="LoginTest.js"></script>
-<script src="CreateFeedTest.js"></script>
-<script src="GetUserFeedsTest.js"></script>
-<script src="SubmitMessageTest.js"></script>
-<script src="GetMessageTest.js"></script>
-<script src="EditMessageTest.js"></script>
-<script src="DeleteFeedTest.js"></script>
+<script src="suite1/DeleteMessageTest.js"></script>
+<script src="suite1/CrreateUserTest.js"></script>
+<script src="suite1/LoginTest.js"></script>
+<script src="suite1/CreateFeedTest.js"></script>
+<script src="suite1/GetUserFeedsTest.js"></script>
+<script src="suite1/SubmitMessageTest.js"></script>
+<script src="suite1/GetMessageTest.js"></script>
+<script src="suite1/EditMessageTest.js"></script>
+<script src="suite1/DeleteFeedTest.js"></script>
 <script src="test.js?1081"></script>
 <script src="md5.js"></script>
 
