--- a/tests/test.html
+++ b/tests/test.html
@@ -35,6 +35,7 @@
 <script src="suite1/GetMessageTest.js"></script>
 <script src="suite1/EditMessageTest.js"></script>
 <script src="suite1/DeleteFeedTest.js"></script>
+<script src="suite1/DeleteUserTest.js"></script>
 <script src="test.js?1081"></script>
 <script src="md5.js"></script>
 
