--- a/tests/test.html
+++ b/tests/test.html
@@ -26,6 +26,8 @@
 
 <script src="jquery.js"></script>
 <script src="TestClass.js"></script>
+<script src="suite1/AddMediaTest.js"></script>
+<script src="suite1/SetAvatarTest.js"></script>
 <script src="suite1/DeleteMessageTest.js"></script>
 <script src="suite1/CrreateUserTest.js"></script>
 <script src="suite1/LoginTest.js"></script>
