--- a/tests/test.html
+++ b/tests/test.html
@@ -18,6 +18,7 @@
 
 <div style="margin-bottom: 12px;">
 <button onclick="startLoop();">RUN TESTS</button>
+<button onclick="stopLoop();">STOP TESTS</button>
 </div>
 
 <div id="testlogger"></div>
