New test class, only 3 old tests redone

--- a/tests/test.html
+++ b/tests/test.html
@@ -27,13 +27,17 @@
 
 <script src="jquery.js"></script>
 <script src="TestClass.js"></script>
+<script src="TestClass2.js"></script>
 <script src="suite1/GetMediaTest.js"></script>
 <script src="suite1/AddMediaTest.js"></script>
 <script src="suite1/SetAvatarTest.js"></script>
 <script src="suite1/DeleteMessageTest.js"></script>
 <script src="suite1/CrreateUserTest.js"></script>
+<script src="suite1/CrreateUserTest2.js"></script>
 <script src="suite1/LoginTest.js"></script>
+<script src="suite1/LoginTest2.js"></script>
 <script src="suite1/CreateFeedTest.js"></script>
+<script src="suite1/CreateFeedTest2.js"></script>
 <script src="suite1/GetUserFeedsTest.js"></script>
 <script src="suite1/SubmitMessageTest.js"></script>
 <script src="suite1/GetMessageTest.js"></script>
