--- a/tests/test.html
+++ b/tests/test.html
@@ -29,7 +29,9 @@
 <script src="TestClass.js"></script>
 <script src="TestClass2.js"></script>
 <script src="suite1/GetMediaTest.js"></script>
+<script src="suite1/GetMediaTest2.js"></script>
 <script src="suite1/AddMediaTest.js"></script>
+<script src="suite1/AddMediaTest2.js"></script>
 <script src="suite1/SetAvatarTest.js"></script>
 <script src="suite1/DeleteMessageTest.js"></script>
 <script src="suite1/CrreateUserTest.js"></script>
