--- a/public/example/index.html
+++ b/public/example/index.html
@@ -23,10 +23,13 @@
 
 
 <div class="row top_area" style="margin-top: 0px;">
-        <div class="col-sm-12" id="feed_header">
-                                <a href="javascript: changeFeed(0, 'ALL FEEDS');"><h1>ALL FEEDS</h1></a>
-                                
-</div></div>    
+        <div class="col-sm-6" id="feed_header">
+            <a href="javascript: changeFeed(0, 'ALL FEEDS');"><h1>ALL FEEDS</h1></a>
+        </div>
+        <div class="col-sm-6" id="">
+            Settings | Photos
+        </div>    
+    </div>    
 <div class="row top_area" style="margin-top: 0px;">
     <div class="col-sm-12" id="feed_top">
             <div class="row" style="margin: 0 0 0 0;">
