--- a/public/example/index.html
+++ b/public/example/index.html
@@ -26,7 +26,7 @@
         <div class="col-sm-6" id="feed_header">
             <a href="javascript: changeFeed(0, 'ALL FEEDS');"><h1>ALL FEEDS</h1></a>
         </div>
-        <div class="col-sm-6" id="">
+        <div class="col-sm-6" id="feed_menu" style="text-align: right;">
             Settings | Photos
         </div>    
     </div>    
@@ -97,6 +97,12 @@
         <a href="javascript: showLogin();">Click here to login</a>
 </div>
  </div>
+
+
+
+ <script id="feed_menu_template" type="text/html">
+       <a href="javascript: showMyPhotos();">Photos</a> | <a href="javascript: showSettings()">Settings</a>
+   </script>
 
  <script id="top_logged_out" type="text/html">
  <div class="row" style="margin: 0 0 0 0;">
@@ -338,7 +344,7 @@ to post
 
 <script src="js/jquery.js"></script>
 <script src="js/bootstrap.min.js?1017"></script>
-<script src="js/feed.js?1089"></script>
+<script src="js/feed.js?1090"></script>
 <script src="js/jquery.fine-uploader.js"></script>
 <script src="js/timeago.min.js" type="text/javascript"></script>        
 <script src="js/timeago.locales.min.js" type="text/javascript"></script>        
