--- a/public/example/index.html
+++ b/public/example/index.html
@@ -141,10 +141,12 @@ to post
 <script id="your_settings_template" type="text/html">
     <h2>Settings</h2>
     <label>Display name</label>
-    <input name="settings_display_name" id="settings_display_name" type="text" class="form-control" placeholder="Dit viste navn"/>
-    <button class="btn btn-primary" onclick="saveMySettings()">SAVE</button>
-        
+    <input name="settings_display_name" id="settings_display_name" type="text" class="form-control" placeholder="Your shown name"/>
+    <label>Avatar url</label>
+    <input name="settings_avatar_url" id="settings_avatar_url" type="text" class="form-control" placeholder="Url to a photo"/>
+    <button class="btn btn-primary" onclick="saveMySettings()">SAVE</button>        
 </script>
+
 
  <script id="create_feed_template2" type="text/html">
     <h2>Opret feed</h2>
