--- a/public/example/index.html
+++ b/public/example/index.html
@@ -144,7 +144,8 @@ to post
     <input name="settings_display_name" id="settings_display_name" type="text" class="form-control" placeholder="Your shown name"/>
     <label>Avatar url</label>
     <input name="settings_avatar_url" id="settings_avatar_url" type="text" class="form-control" placeholder="Url to a photo"/>
-    <button class="btn btn-primary" onclick="saveMySettings()">SAVE</button>        
+    <button class="btn btn-primary" onclick="saveMySettings()">SAVE</button>     
+    <button class="btn btn-default" onclick="showPostMessage()">BACK</button>        
 </script>
 
 
