--- a/public/example/index.html
+++ b/public/example/index.html
@@ -145,7 +145,8 @@ to post
     <label>Avatar url</label>
     <input name="settings_avatar_url" id="settings_avatar_url" type="text" class="form-control" placeholder="Url to a photo"/>
     <button class="btn btn-primary" onclick="saveMySettings()">SAVE</button>     
-    <button class="btn btn-default" onclick="showPostMessage()">BACK</button>        
+    <button class="btn btn-default" onclick="showPostMessage()">BACK</button>    
+    <div style="display: inline-block" id="settings_message"></div>    
 </script>
 
 
