set displayname test

--- a/tests/test.html
+++ b/tests/test.html
@@ -28,6 +28,7 @@
 <script src="jquery.js"></script>
 <script src="TestClass2.js"></script>
 <script src="suite1/GetMediaTest.js"></script>
+<script src="suite1/SetDisplayNameTest.js"></script>
 <script src="suite1/AddMediaTest.js"></script>
 <script src="suite1/SetAvatarTest.js"></script>
 <script src="suite1/DeleteMessageTest.js"></script>
