--- a/public/example/index.html
+++ b/public/example/index.html
@@ -192,6 +192,10 @@ to post
     </div>
 </script>
 
+<script id="my_photos_template" type="text/html">
+    <img src="{{ media_url }}" style="max-width: 200px"/>
+    <br/><br/>
+</script>
 
 <script id="comment_view_template" type="text/html">
     <div class="row" style="margin-top: 10px;">
@@ -346,7 +350,7 @@ to post
 
 <script src="js/jquery.js"></script>
 <script src="js/bootstrap.min.js?1017"></script>
-<script src="js/feed.js?1091"></script>
+<script src="js/feed.js?1092"></script>
 <script src="js/jquery.fine-uploader.js"></script>
 <script src="js/timeago.min.js" type="text/javascript"></script>        
 <script src="js/timeago.locales.min.js" type="text/javascript"></script>        
