--- a/public/example/index.html
+++ b/public/example/index.html
@@ -194,6 +194,7 @@ to post
 
 <script id="my_photos_template" type="text/html">
     {{#photos}}
+    test
     <img src="{{ media_url }}" style="max-width: 200px"/>
     <br/><br/>
     {{/photos}}
@@ -352,7 +353,7 @@ to post
 
 <script src="js/jquery.js"></script>
 <script src="js/bootstrap.min.js?1017"></script>
-<script src="js/feed.js?1094"></script>
+<script src="js/feed.js?1095"></script>
 <script src="js/jquery.fine-uploader.js"></script>
 <script src="js/timeago.min.js" type="text/javascript"></script>        
 <script src="js/timeago.locales.min.js" type="text/javascript"></script>        
