sort media by date

--- a/public/example/index.html
+++ b/public/example/index.html
@@ -194,10 +194,10 @@ to post
 
 <script id="my_photos_template" type="text/html">
     {{#photos}}
-    test
     <img src="{{ media_url }}" style="max-width: 200px"/>
     <br/><br/>
     {{/photos}}
+    <button class="btn btn-default" onclick="showPostMessage()">BACK</button>    
 </script>
 
 <script id="comment_view_template" type="text/html">
