--- a/public/example/index.html
+++ b/public/example/index.html
@@ -147,6 +147,9 @@ to post
     <button class="btn btn-primary" onclick="saveMySettings()">SAVE</button>     
     <button class="btn btn-default" onclick="showPostMessage()">BACK</button>    
     <div style="display: inline-block" id="settings_message"></div>    
+    <label>Create new feed</label>
+    <input name="settings_create_feed" id="settings_create_feed" type="text" class="form-control" placeholder="Feed title"/>
+    <button class="btn btn-primary" onclick="createNewFeed()">CREATE</button>         
 </script>
 
 
@@ -356,7 +359,7 @@ to post
 
 <script src="js/jquery.js"></script>
 <script src="js/bootstrap.min.js?1017"></script>
-<script src="js/feed.js?1099"></script>
+<script src="js/feed.js?1100"></script>
 <script src="js/jquery.fine-uploader.js"></script>
 <script src="js/timeago.min.js" type="text/javascript"></script>        
 <script src="js/timeago.locales.min.js" type="text/javascript"></script>        
