--- a/public/example/index.html
+++ b/public/example/index.html
@@ -146,7 +146,7 @@ to post
     <input name="settings_avatar_url" id="settings_avatar_url" type="text" class="form-control" placeholder="Url to a photo"/>
     <button class="btn btn-primary" onclick="saveMySettings()">SAVE</button>     
     <button class="btn btn-default" onclick="showPostMessage()">BACK</button>    
-    <div style="display: inline-block" id="settings_message"></div>    
+    <div style="display: inline-block" id="settings_message"></div><br/><br/>    
     <label>Create new feed</label>
     <input name="settings_create_feed" id="settings_create_feed" type="text" class="form-control" placeholder="Feed title"/>
     <button class="btn btn-primary" onclick="createNewFeed()">CREATE</button>         
