--- a/public/example/index.html
+++ b/public/example/index.html
@@ -200,7 +200,7 @@ to post
     {{#photos}}
     <div class="col-sm-4">
     <img src="{{ media_url }}" style="max-width: 200px"/><br/>
-    <a href="">Set avatar</a>  <a href="">Del</a>
+    <a href="">Set avatar</a>  <a href="javascript: deleteMedia({{id}});">Del</a>
     </div>
     {{/photos}}
 </div>
