--- a/public/example/index.html
+++ b/public/example/index.html
@@ -65,7 +65,7 @@
        
     <div style="text-align: center; margin-top: 50px;">
             <a href="javascript: prevPhoto();"><i class="fas fa-angle-left" style="font-size: 400%; "></i></a>
-        <img id="overlay_img" src="">
+        <img id="overlay_img" src="" style="max-width: 70%">
         <a href="javascript: nextPhoto();">
             <i class="fas fa-angle-right" style="font-size: 400%"></i></a>
     </div>
